# mpkg

./: Cargo.toml  LICENSE  README.md
crates/mpkg/: Cargo.toml
crates/mpkg/src/: cli.rs  main.rs
crates/mpkg_core/: Cargo.toml
crates/mpkg_core/docs/: language_spec.md
crates/mpkg_core/src/: cache.rs  directory.rs  error.rs  lang_primitives.rs  lib.rs  package.rs  util.rs
examples/ghidra/: build.mpkg  build.sh  fetch_version.sh  fetch_zip.sh  ghidra_wrapper.sh
examples/ghidra_desktop_file/: build.mpkg  build.sh  uninstall.sh
examples/java_openjdk26/: build.mpkg  build.sh
