[package]
name = "mpkg_core"
version = "0.1.0"
edition = "2024"

[dependencies]
archive = "0.3.0"
fs_extra = "1.3.0"
futures-util = "0.3.32"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = "1.51.0"
toml = "1.1.2"
